<resources>
    <string name="app_name">HCI Project</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_time_table">TIME TABLE</string>
    <string name="pick_a_day">Pick a day</string>
    <string name="logo">Logo</string>

    <string name="assignments">ASSIGNMENTS</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="numClass">You have %d classes today</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="class_activity_cancel">You will lose the class data that you have filled. \n\nNewly created subjects will not be deleted and can be deleted by visiting My Subjects</string>
    <string name="pick_a_subject">Pick a subject</string>
    <string name="add_a_new_subject">Add a new subject</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="add_class">Add class</string>
    <string name="subject_name">Subject name</string>
</resources>